Adicionando estilo aos cards de granadas

--- a/my-csgo-grenades/.vscode/settings.json
+++ b/my-csgo-grenades/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cSpell.words": [
         "janela",
         "Janelão",
+        "lixeira",
         "meio",
         "Molotove",
         "nilba",
+        "Tickrate",
         "Tóxico",
         "tripla"
     ]
