Adicionando section main about e botões de filtro

--- a/my-csgo-grenades/.vscode/settings.json
+++ b/my-csgo-grenades/.vscode/settings.json
@@ -1,11 +1,20 @@
 {
     "cSpell.words": [
+        "cabecinha",
+        "Cabeçinha",
+        "Caminhão",
+        "dupla",
+        "Invertida",
         "janela",
         "Janelão",
+        "liga",
         "lixeira",
         "meio",
         "Molotove",
         "nilba",
+        "Ponte",
+        "Saída",
+        "Sapão",
         "Tickrate",
         "Tóxico",
         "tripla"
