Adicionando informação do spot de onde a granada é jogada

--- a/my-csgo-grenades/.vscode/settings.json
+++ b/my-csgo-grenades/.vscode/settings.json
@@ -1,13 +1,19 @@
 {
     "cSpell.words": [
+        "biblioteca",
         "cabecinha",
         "Cabeçinha",
+        "caixão",
         "Caminhão",
+        "carroça",
+        "caverna",
         "dupla",
+        "esgoto",
         "Invertida",
         "janela",
         "Janelão",
         "liga",
+        "ligação",
         "lixeira",
         "meio",
         "Molotove",
@@ -15,6 +21,7 @@
         "Ponte",
         "Saída",
         "Sapão",
+        "tapete",
         "Tickrate",
         "Tóxico",
         "tripla"
