--- a/chart11/package.json
+++ b/chart11/package.json
@@ -2,7 +2,7 @@
   "name": "chart11",
   "version": "0.1.0",
   "private": true,
-  "Homepage": "https://chart11poker.netlify.app/",
+  "Homepage": "https://ubiquitous-kringle-6ccaa8.netlify.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
